# rust-code

./: README.md
apex/: .gitignore  Cargo.toml  README.md  apex.toml  config.toml
apex/.github/agents/: Darwin.agent.md  First.agent.md
apex/.tools/: AGENT_INSTRUCTIONS.md  project.md  project_analyzer.py
apex/.tools/data/: memory.jsonl
apex/.tools/mcp/: README.md  THINKING_TOOLS_README.md
apex/benches/: Cargo.toml  README.md  bench.rs  bench_h2.rs  bench_h2_v2.rs  blocking_bench.rs  blocking_echo.rs  blocking_proxy.rs  direct_proxy.rs  echo_server.rs  echo_server_h2.rs  http2_proxy.rs  http2_proxy_lockfree.rs  http2_proxy_v2.rs  http2_proxy_v3.rs  http2_proxy_v4.rs  lockfree_pool_proxy.rs  minimal_proxy.rs  raw_h2_proxy.rs  semaphore_pool_proxy.rs
apex/benches/blocking/: Cargo.toml  blocking_bench.rs  blocking_echo.rs  blocking_proxy.rs  hp_bench.rs  hp_proxy.rs  hp_proxy_v2.rs
apex/crates/apex/: Cargo.toml
apex/crates/config/: Cargo.toml
apex/crates/core/: Cargo.toml
apex/crates/server/: Cargo.toml
apex/docs/: IDEA.md
apex/docs/knowledge/: proxy.md
apex/docs/plan/: discussion_idea_gemini3_round1_2026-01-28.md  discussion_idea_gemini3_round2_2026-01-28.md  discussion_idea_gemini3_round3_2026-01-28.md  discussion_idea_gemini3_round4_2026-01-28.md  discussion_idea_gpt5_round1_2026-01-28.md  discussion_idea_gpt5_round2_2026-01-28.md  discussion_idea_gpt5_round3_2026-01-28.md  discussion_idea_gpt5_round4_2026-01-28.md  discussion_idea_gpt5_round5_2026-01-28.md  discussion_idea_opus4.5_round1_2026-01-28.md  discussion_idea_opus4.5_round2_2026-01-28.md  discussion_idea_opus4.5_round3_2026-01-28.md  discussion_idea_opus4.5_round4_2026-01-28.md  review_idea_proxy-now_gemini3_round1_2026-01-28.md  review_idea_proxy-now_gpt5_round1_2026-01-28.md  review_sourcecode_gpt5_round1_2026-01-28.md  review_sourcecode_gpt5_round2_2026-01-28.md
apex/docs/proposal/: Proposed-Apex.md
apex/scripts/: bench.ps1
bibank/: .gitignore  Cargo.toml  README.md
bibank/.github/: copilot-instructions.md
bibank/.github/agents/: BiBank-Planing.agent.md  Dev.agent.md  Discussion.agent.md  Ochestra.agent.md  Vission.agent.md
bibank/.tools/: bibank_project.md  project_analyzer.py
bibank/crates/approval/: Cargo.toml
bibank/crates/bus/: Cargo.toml
bibank/crates/compliance/: Cargo.toml
bibank/crates/core/: Cargo.toml
bibank/crates/dsl/: Cargo.toml
bibank/crates/events/: Cargo.toml
bibank/crates/hooks/: Cargo.toml
bibank/crates/ledger/: Cargo.toml
bibank/crates/matching/: Cargo.toml
bibank/crates/oracle/: Cargo.toml
bibank/crates/projection/: Cargo.toml
bibank/crates/risk/: Cargo.toml
bibank/crates/rpc/: Cargo.toml
bibank/data/: .gitkeep
bibank/docs/: IDEA.md
bibank/docs/plan/: DSL_SCOPE.md  descussion_idea_gemini3_round1_2026-01-25.md  descussion_idea_gpt5_round1_2026-01-25.md  descussion_idea_gpt5_round3_2026-01-25.md  descussion_idea_ochestra_opus4.5_all_2026-01-25.md  discussion_idea_gemini3_round4_2026-01-25.md  discussion_idea_gpt5_round2_2026-01-25.md  discussion_idea_ochestra_opus4.5_all_2026-01-25.md
bibank/docs/proposed/: Proposed-BiBank-Phase1.md  Proposed-BiBank-Phase2.md  Proposed-BiBank-Phase3.md  Proposed-BiBank-Phase4.md
chat/: Cargo.toml
chat/docs/: CHAT-PROPOSAL.md
chat/src/: error.rs  lib.rs  main.rs
chat/src/chat/: handler.rs  mod.rs  state.rs
chat/static/: app.js  index.html  style.css
drawboard/: Cargo.toml
drawboard/docs/: DRAWBOARD-PROPOSAL.md
drawboard/src/: error.rs  lib.rs  main.rs
drawboard/src/drawing/: canvas.rs  draw_message.rs  mod.rs
drawboard/src/room/: broadcaster.rs  mod.rs  player.rs  room.rs
drawboard/src/websocket/: handler.rs  message.rs
drawboard/static/: app.js  index.html  style.css
hp-proxy/: .gitignore  Cargo.toml  README.md  bench.sh  run_bench.sh
hp-proxy/src/: bench.rs  echo.rs  main.rs
neat-rust/: Cargo.toml  IMPLEMENTATION_STATUS.md
neat-rust/examples/: README_INDICATORS.md  btc_neat_trading_bot_v1.0.rs  btc_neat_trading_bot_v2.0.rs  btc_ohlcv_history.csv  gold_neat_trading_bot.rs  gold_ohlcv_history.csv  indicator_config_demo.rs  neat_trading_bot.rs  runtime_strategy_demo.rs  strategy_comparison.rs
neat-rust/examples/strategy_configs/: advanced_strategy.json  basic_strategy.json  momentum_strategy.json
neat-rust/src/: config.rs  lib.rs  main.rs  neat.rs  utils.rs
neat-rust/src/architecture/: architect.rs  connection.rs  group.rs  layer.rs  mod.rs  network.rs  node.rs
neat-rust/src/methods/: activation.rs  connection.rs  cost.rs  crossover.rs  gating.rs  methods.rs  mod.rs  mutation.rs  rate.rs  selection.rs
neat-rust/tests/: connection.rs  group.rs  layer.rs  neat_comprehensive.rs  network.rs  network_xor.rs  node.rs  perceptron.rs
postgres-mcp/: Cargo.toml  README.md
postgres-mcp/src/: lib.rs  main.rs  mcp_core.rs
postgres-mcp/src/tools/: mod.rs  postgres.rs
rust-workspace/: .gitignore  Cargo.toml  README.md
rust-workspace/crates/api/: Cargo.toml
rust-workspace/crates/cli/: Cargo.toml
rust-workspace/crates/core/: Cargo.toml
rust-workspace/crates/utils/: Cargo.toml
simbank/: .gitignore  Cargo.toml  README.md
simbank/crates/business/: Cargo.toml
simbank/crates/cli/: Cargo.toml
simbank/crates/core/: Cargo.toml
simbank/crates/dsl/: Cargo.toml
simbank/crates/persistence/: Cargo.toml
simbank/docs/: ARCHITECTURE.md  CLI_GUIDE.md  DEVELOPER.md  DSL_GUIDE.md  IDEA.md  PAINPOINT.md
simbank/examples/: 01_customer_onboarding.rs  02_employee_operations.rs  03_shareholder_dividends.rs  04_auditor_aml_scan.rs  05_complex_scenario.rs  Cargo.toml
simbank/migrations/: 20260125_init.sql
snake-rs/: Cargo.toml
snake-rs/docs/: IDEA.md  Thirteen_Card_game.md
snake-rs/src/: broadcast.rs  config.rs  event_logger.rs  main.rs  protocol.rs  rate_limiter.rs  state.rs
snake-rs/static/: index.html
src/asset_api/: Cargo.toml  README.md
websocket/: Cargo.toml  README.md
websocket/docs/: 100M-users-connect.md  1M-users-connect.md
websocket/proto/: message.proto
websocket/src/: bench.rs  client.rs  client_binary.rs  server.rs  server_hp.rs
(+246 files in other folders)
