[workspace]
members = [
    "crates/core",
    "crates/ledger",
    "crates/risk",
    "crates/events",
    "crates/bus",
    "crates/projection",
    "crates/rpc",
    "crates/dsl",
    "crates/oracle",
    "crates/matching",
    "crates/approval",
    "crates/compliance",
    "crates/hooks",
]
exclude = [".tools/mcp"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["BiBank Team"]
license = "MIT"

[workspace.dependencies]
# Core
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust_decimal = { version = "1.33", features = ["serde-with-str", "maths"] }
rust_decimal_macros = "1.33"
thiserror = "2.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# Crypto
sha2 = "0.10"
hex = "0.4"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"

# Async
async-trait = "0.1"

# Utilities
strum = { version = "0.26", features = ["derive"] }
strum_macros = "0.26"
tokio = { version = "1.36", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.7", features = ["serde", "v4"] }

# Projection
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono"] }

# CLI
clap = { version = "4.4", features = ["derive"] }

# Testing
tempfile = "3.24"

# Internal crates
bibank-core = { path = "./crates/core" }
bibank-ledger = { path = "./crates/ledger" }
bibank-risk = { path = "./crates/risk" }
bibank-events = { path = "./crates/events" }
bibank-bus = { path = "./crates/bus" }
bibank-projection = { path = "./crates/projection" }
bibank-rpc = { path = "./crates/rpc" }
bibank-matching = { path = "./crates/matching" }
bibank-oracle = { path = "./crates/oracle" }
bibank-dsl = { path = "./crates/dsl" }
bibank-approval = { path = "./crates/approval" }
bibank-compliance = { path = "./crates/compliance" }
bibank-hooks = { path = "./crates/hooks" }
