[package]
name = "drawboard-rs"
version = "0.1.0"
edition = "2021"
description = "A collaborative real-time drawing application using WebSocket"
authors = ["Drawboard Team"]

[dependencies]
# Web framework
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }

# WebSocket
futures-util = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Image processing
image = "0.25"
tiny-skia = "0.11"

# Utilities
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tokio-test = "0.4"
tokio-tungstenite = "0.21"

[[bin]]
name = "drawboard"
path = "src/main.rs"
