[package]
name = "neat-rust"
version = "0.1.0"
edition = "2021"
authors = ["Rust NEAT Implementation Team"]
description = "NEAT (NeuroEvolution of Augmenting Topologies) implementation in Rust"

[dependencies]
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
thiserror = "1.0"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4"
csv = "1.3"
