[package]
name = "postgres-mcp"
version = "0.1.0"
edition = "2021"
description = "PostgreSQL MCP Server - A Model Context Protocol server for PostgreSQL database operations"

[workspace]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full", "rt-multi-thread"] }
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"] }
lazy_static = "1.4"
rust_decimal = { version = "1.33", features = ["db-tokio-postgres"] }

[[bin]]
name = "postgres-mcp"
path = "src/main.rs"
