[package]
name = "snake-rs"
version = "0.1.0"
edition = "2021"
description = "Multiplayer Snake game with WebSocket"
authors = ["Your Name"]

[dependencies]
# Web framework
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "cors"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async utilities
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
async-trait = "0.1"

# Concurrent data structures
dashmap = "6"

# Unique identifiers
uuid = { version = "1", features = ["v4"] }

# Random number generation
rand = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Static file embedding
rust-embed = "8"
mime_guess = "2"

[profile.release]
lto = true
codegen-units = 1
strip = true
