[package]
name = "websocket-rs"
version = "0.1.0"
edition = "2021"
description = "High-performance WebSocket server for 1M+ connections"
authors = ["Your Name"]

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "server-hp"
path = "src/server_hp.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "client-binary"
path = "src/client_binary.rs"

[[bin]]
name = "bench"
path = "src/bench.rs"

[features]
default = []
io-uring = ["tokio-uring"]

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full", "parking_lot"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"

# Binary protocol - using bincode (no protoc needed)
bincode = "1.3"
rkyv = { version = "0.7", features = ["validation"] }

# High-performance concurrent collections
dashmap = "5.5"
crossbeam = "0.8"
crossbeam-channel = "0.5"

# Memory efficient
bytes = "1.5"
smallvec = "1.11"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Metrics & logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# System utilities
num_cpus = "1.16"
socket2 = "0.5"

# Linux-specific io_uring (optional)
tokio-uring = { version = "0.4", optional = true }

# Connection pool
parking_lot = "0.12"

# Atomic operations
arc-swap = "1.6"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
nix = { version = "0.27", features = ["sched", "net"] }

# No build dependencies needed - using bincode instead of protobuf

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true

[profile.release-debug]
inherits = "release"
debug = true
strip = false
