[package]
name = "asset_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.6.3", features = ["sqlite","runtime-tokio-rustls"]  }
serde = { version = "1", features = ["derive"] }
