[package]
name = "apex-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Configuration management for Apex reverse proxy"

[dependencies]
apex-core.workspace = true
serde.workspace = true
toml.workspace = true
thiserror.workspace = true
tracing.workspace = true
arc-swap.workspace = true

[dev-dependencies]
tempfile = "3"
