[package]
name = "bibank-approval"
version = "0.1.0"
edition = "2021"

[dependencies]
bibank-ledger.workspace = true
bibank-core.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1.0", features = ["v4"] }
rust_decimal.workspace = true
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
tempfile = "3.0"
