[package]
name = "bibank-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "BiBank core domain types (Amount, Currency)"

[dependencies]
rust_decimal.workspace = true
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
serde_json.workspace = true
