[package]
name = "bibank-events"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "BiBank events - JSONL event store"

[dependencies]
bibank-core.workspace = true
bibank-ledger.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true
tracing.workspace = true

[dev-dependencies]
anyhow.workspace = true
tempfile = "3.10"
