[package]
name = "bibank-ledger"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "BiBank ledger - Double-entry accounting core"

[dependencies]
bibank-core.workspace = true
rust_decimal.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true
sha2.workspace = true
hex.workspace = true
strum.workspace = true
strum_macros.workspace = true
ed25519-dalek.workspace = true
rand.workspace = true

[dev-dependencies]
anyhow.workspace = true
